Fix overflowing header image

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,12 @@ body{
     height: 750px;    
 }
 
+/*fixes brownies image or any image that ends up too wide*/
+.header-image.wide{
+    width: 900px;
+    height: auto;
+}
+
 .center{
     text-align: center;           
 }
@@ -50,6 +56,8 @@ body{
     border-style: solid;
     border-width: 2px;
 }
+
+
 .nav-link{
     font-family: Arial, Helvetica, sans-serif;    
     text-align: center;
